--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,14 +1,3 @@
-.app {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.main-content {
-    max-width: 960px;
-    width: 100%;
-}
-
 .holiday-table {
     width: 100%;
     border-collapse: collapse;
@@ -25,16 +14,8 @@
     color: white;
 }
 
-
 .table-responsive {
-    display: flex;
-    justify-content: center;
-    align-items: start;
-}
-
-.table-wrapper {
-    max-width: 1000px;
-    width: 100%;
+    overflow-x: auto;
 }
 
 @media only screen and (max-width: 600px) {
